# BTRFS-Volume-Manager

./: .gitignore  .travis.yml  README.md  env_var_setup.sh
common/dtos/: block_device.go  btrfs_structs.go  websocket_message.go  websocket_message_test.go
common/request/: context.go
common/router/: router.go
common/tasks/: task.go
common/wsprotocol/: connection.go  connection_manager.go  connection_updater.go  dialer.go
common/wsserver/: authenticator.go  connection.go  connection_manager.go
libbtrfs/: CMakeLists.txt  btrfs.h  libbtrfs.c  libbtrfs_test.c  libbtrfs_utils.c
libbtrfs/btrfs-iface/: CMakeLists.txt  ioctl.h  logging.c  utils.c
master/: database.go  main.go  models.go  parser.go
master/authentication/: auth_controller.go  auth_controller_test.go  auth_service.go  auth_service_test.go
master/db/: database.go
master/models/: models.go
master/storageservers/: controller.go  tracker.go
master/storageservers/blockdevices/: controller.go
master/views/: bower.json  content.html  index.html  indexStyle.css
master/views/app/: index.html
master/views/app/scripts/: app.js
master/views/app/scripts/controllers/: authentication.js  serverdetails.js  storagelist.js  volumedetails.js
master/views/app/scripts/services/: authentication.js  storage.js  websocket.js
master/views/app/views/: form.html
master/views/scripts/: highcharts.js
slave/: auth_controller.go  block_dev_controller.go  main.go  parser.go
slave/osinterface/: blockdev_interface.go  btrfs_subvol_interface.go  cache.go  errors.go  mounting.go  os_interface.go
(+13 files in other folders)
